очистка файлового хранилища

--- a/escom-bpm-resource/src/main/resources/locale/Bundle_en.properties
+++ b/escom-bpm-resource/src/main/resources/locale/Bundle_en.properties
@@ -1082,3 +1082,5 @@ Black=Black
 OpenInExplorer=Open in explorer
 ArchiveSize=Archive size
 CurrentSize=Current size
+RemovalNotRelatedFiles=Remove of not related files
+CleanUpFileStorage=Clean up file storage
