--- a/escom-bpm-resource/src/main/resources/locale/messages_en.properties
+++ b/escom-bpm-resource/src/main/resources/locale/messages_en.properties
@@ -315,3 +315,5 @@ NotifyFromDoc=Notify from document
 PatternInfo=You can use: N-sequence number, YY-year four digits, y-year one digit, T-document type code, O-company code
 InfoChangeRight=When you are finished editing permissions, click Save"
 CuratorNotSet=The role of the process Curator is not correct!
+InfoCleanUpFileStorage=Non-document-related files will be deleted from the file storage
+CountFilesWereDeleted=Viewed ''{1}'' files. ''{0}'' was removed from them files
