--- a/escom-bpm-resource/src/main/resources/locale/Bundle_en.properties
+++ b/escom-bpm-resource/src/main/resources/locale/Bundle_en.properties
@@ -1084,3 +1084,9 @@ ArchiveSize=Archive size
 CurrentSize=Current size
 RemovalNotRelatedFiles=Remove of not related files
 CleanUpFileStorage=Clean up file storage
+Exec=Execute
+TotalFiles=Total files
+Calculate=Calculate
+Goodbye=See you soon!
+Inn=Inn
+Kpp=Kpp
