--- a/escom-bpm-resource/src/main/resources/locale/messages_en.properties
+++ b/escom-bpm-resource/src/main/resources/locale/messages_en.properties
@@ -104,7 +104,7 @@ StaffUsedInUsers=Staff ''{0}'' unit tied to user accounts!
 PartnerUsedInDocs=The partner ''{0}'' used in documents!
 DocTypeUsedInDocs=The type ''{0}'' used in documents!
 PartnerCodeIsExsist=In data base already exists partner ''{0}'' with code ''{1}''!
-PartnerIsExsist=Partner ''{0}'' already exsist!
+PartnerIsExsist=Partner INN: ''{0}'' and KPP: ''{1}'' already exsist!
 ObjectAddedToFavorites=The object ''{0}'' is added to favorites
 NotExecuted=Not executed!
 ObjectAlreadyAddedFavorites=The object ''{0}'' has already been previously added to favorites!
@@ -196,28 +196,28 @@ CompanyUsedInStaffs=Company ''{0}'' used in staffs!
 ImpossibleRemove=It is impossible to remove object ''{0}''!
 Welcom=Welcome to the program ESCOM-BPM WEB! Reference information on working with the program You can get by clicking on <Help>
 StartStateNotPresentinListsStates=The starting state ''{0}'' is not in the list of object States!
-WorkflowIncorrectData=Incorrect workflow route data!
+WorkflowIncorrectData=Incorrect workflow route data! Process [{0}] ''{1}''.
 LinkProcessIncorrect=The link to the process is incorrect. It is possible that the process has been deleted.
 ProcessNotContainDoc=The process ''{0}'' does not contain a document!
 DiagramNotHaveExit=The diagram does not specify a process exit!
 DiagramNotHaveStart=The scheme must be have the 'Start' or 'Enter' element. No entry point to the process is specified!
 DiagramNotHaveConnectors=Diagram not have a connectors!
 ConfirmInterruptionProcess=You interrupt the process that is currently running! Confirm your action!
-TasksNoHaveDeadline=Not all tasks have a deadline!
+TasksNoHaveDeadline=The task [{0}] ''{1}'' don't have a deadline!
 ProcessSuccessfullyLaunched=The process was successfully launched!
 ProcessExecutionInterrupted=The execution of the process interrupted!
 ErrorUnpackingProcessDiagram=Error unpacking process diagram!
 TaskNoHaveListResult=No result list is set for the task!
-IncorrectConditionRouteProcess=An incorrect condition in the route process!
+IncorrectConditionRouteProcess=An incorrect condition in the route process [{0}] ''{1}''!
 IncorrectProcedureRouteProcess=An incorrect procedure in the route process!
 ProcedureSettingStateContainsIncorrectValue=The document state setting procedure contains an incorrect value!
-StateProcessRouteNotFound=The state specified in the process route was not found in the database!
+StateProcessRouteNotFound=The state ''{0}'' specified in the process route was not found in the database!
 IncorrectLinkProcess=Incorrect link to the process!
 InternalErrorRunningProcess=An internal error occurred while running the process!
 InternalErrorSavingTask=An internal error occurred while saving the task!
 DeadlineSpecifiedInPastTime=The deadline is specified in the past time!
 DeadlineIncorrect=The deadline is incorrect!
-TaskExecTimeLongerThanProcessDeadLine=Task execution time is longer than the process deadline!
+TaskExecTimeLongerThanProcessDeadLine=Task [{0}] ''{1}'' execution time is longer than the process deadline!
 YouReceivedNewTask=You received a new task
 ReminderPeriodIncorrect=The reminder period is incorrect!
 ReminderTimeNotSet=Not set the reminder time!
@@ -279,10 +279,10 @@ CompanyUsedInProcesses=The company ''{0}'' is used in documents!
 StaffUsedInTasks=The staff unit ''{0}'' is used in tasks!
 File\u0421reated=File ''{0}'' created!
 ProcessNotFound=Process for ID ''{0}'' not found!
-TaskNoHaveName=In one of the tasks is not specified the text of the order!
+TaskNoHaveName=The task [{0}] ''{1}'' is not specified the text of the order!
 Reminder=Reminder
 DeadlineProcessInPastTime=The process deadline is specified in the past time!
-DeadlineTaskInPastTime=The task deadline is specified in the past time!
+DeadlineTaskInPastTime=The task [{0}] ''{1}'' deadline is specified in the past time!
 NotifyFromProcess=Notify from process
 PleasePayAttentionMyRemark=Colleagues! Please pay attention to my remark!
 UserUsedInDocs=User ''{0}'' used in documents!
@@ -304,8 +304,8 @@ DiagramAlreadyOpenInAnotherWindow=The diagram is already open in another window.
 IncorrectSubProcessType=Incorrect subprocess type!
 InfoProcExit=All running tasks will be canceled and the timers will be stopped.
 ReplaceTaskDatePlanFromProcess=Replace in task execution time for a period from the process
-TaskNoHaveExecutor=The task does not specify the executor!
-OneTasksFailedSetRole=In one of the tasks failed to update the role!
+TaskNoHaveExecutor=The task [{0}] ''{1}'' does not specify the executor!
+OneTasksFailedSetRole=On the task [{0}] ''{1}'' failed to update the role!
 SubprocessCannotBeStarted=The subprocess cannot be started in this context
 CompanyNotSet=The field 'Company' not set!
 InfoSubProcShowCard=The subprocess window will be displayed and can be edited by the user who performed the route action initializing the subprocess.
