--- a/escom-bpm-resource/src/main/resources/locale/Bundle_en.properties
+++ b/escom-bpm-resource/src/main/resources/locale/Bundle_en.properties
@@ -1090,3 +1090,5 @@ Calculate=Calculate
 Goodbye=See you soon!
 Inn=Inn
 Kpp=Kpp
+CreateSerialNumber=Create serial number
+YourSessionIsClosed=Your session is closed
