--- a/escom-bpm-resource/src/main/resources/locale/messages_en.properties
+++ b/escom-bpm-resource/src/main/resources/locale/messages_en.properties
@@ -285,7 +285,7 @@ DeadlineProcessInPastTime=The process deadline is specified in the past time!
 DeadlineTaskInPastTime=The task [{0}] ''{1}'' deadline is specified in the past time!
 NotifyFromProcess=Notify from process
 PleasePayAttentionMyRemark=Colleagues! Please pay attention to my remark!
-UserUsedInDocs=User ''{0}'' used in documents!
+UserUsedInDocs=User ''{0}'' used in 'Documents'!
 UserUsedInProcesses=User ''{0}'' used in processes!
 UserUsedInPartneres=User ''{0}'' used in partners!
 TaskCannotCompletedBecauseProcessStopped=The task cannot be completed because the process is stopped.
@@ -317,3 +317,4 @@ InfoChangeRight=When you are finished editing permissions, click Save"
 CuratorNotSet=The role of the process Curator is not correct!
 InfoCleanUpFileStorage=Non-document-related files will be deleted from the file storage
 CountFilesWereDeleted=Viewed ''{1}'' files. ''{0}'' was removed from them files
+UserUsedInFolders=User ''{0}'' used in 'Folders'!
