--- a/escom-bpm-resource/src/main/resources/locale/Bundle_en.properties
+++ b/escom-bpm-resource/src/main/resources/locale/Bundle_en.properties
@@ -1092,3 +1092,7 @@ Inn=Inn
 Kpp=Kpp
 CreateSerialNumber=Create serial number
 YourSessionIsClosed=Your session is closed
+Ogrn=OGRN
+Address=Address
+DuplicateChiefMessageAssistant=Duplicate to the Deputy of the notification on receipt of new tasks to the head
+DublicateMsg=Duplicate message
