--- a/escom-bpm-resource/src/main/resources/locale/messages_en.properties
+++ b/escom-bpm-resource/src/main/resources/locale/messages_en.properties
@@ -318,3 +318,5 @@ CuratorNotSet=The role of the process Curator is not correct!
 InfoCleanUpFileStorage=Non-document-related files will be deleted from the file storage
 CountFilesWereDeleted=Viewed ''{1}'' files. ''{0}'' was removed from them files
 UserUsedInFolders=User ''{0}'' used in 'Folders'!
+ReceivedSubscribDuplicateMsgChief=You received this message because you are subscribed to duplicate notifications about new tasks for Chief ''{0}''.
+ThisTaskOverdue=This task is overdue!
