доработка ролей процессов

--- a/escom-bpm-resource/src/main/resources/locale/Bundle_en.properties
+++ b/escom-bpm-resource/src/main/resources/locale/Bundle_en.properties
@@ -1096,3 +1096,11 @@ Ogrn=OGRN
 Address=Address
 DuplicateChiefMessageAssistant=Duplicate to the Deputy of the notification on receipt of new tasks to the head
 DublicateMsg=Duplicate message
+CreateDocument=Create document
+CreateTask=Create task
+CurrentWeek=Current week
+Today=Today
+CurrentMonth=Current month
+CurrentQuarter=Current quarter
+CurrentYear=Current year
+Registration=Registration
