--- a/escom-bpm-resource/src/main/resources/locale/Bundle_en.properties
+++ b/escom-bpm-resource/src/main/resources/locale/Bundle_en.properties
@@ -218,7 +218,7 @@ Versions=Versions
 INVALID_FILE_SIZE=Invalid file size
 INVALID_FILE_TYPE=Invalid file type
 UPLOAD=Upload
-INVALID_FILE_COUNT=Invalid file count
+INVALID_FILE_COUNT=No more than 10 files can be downloaded at a time!
 UPLOAD_VERSION=Upload new version
 Download=Download
 IsCurrentVersion=is the current version
@@ -663,7 +663,7 @@ SelectFileAndCreateDoc=Select file and create document
 SaveAndPublish=Save and publish
 ScaningAndCreateDoc=Scaning and create document
 FileName=File name
-AddVersionFromFile=Add version from file
+AddVersionFromFile=Add version(s) from file(s)
 AddVersionFromScan=Add version from scan
 ShowScanerUI=Show scaner UI
 RemoveSelectedImages=Remove Selected Images
@@ -825,7 +825,7 @@ CreateProcesses=Create processes
 Executor=Executor
 AddTask=Add task
 NotAssigned=Not assigned!
-AddLogicElement=Add logic element
+AddLogicElement=Add 'Logic' element
 Add\u0421ondition=Add condition
 addExecutors=Add executors
 And=And
@@ -1096,7 +1096,7 @@ Ogrn=OGRN
 Address=Address
 DuplicateChiefMessageAssistant=Duplicate to the Deputy of the notification on receipt of new tasks to the head
 DublicateMsg=Duplicate message
-CreateDocument=Create document
+DocumentsCreate=Create document(s)
 CreateTask=Create task
 CurrentWeek=Current week
 Today=Today
@@ -1104,3 +1104,17 @@ CurrentMonth=Current month
 CurrentQuarter=Current quarter
 CurrentYear=Current year
 Registration=Registration
+list=list
+single=single
+DataSource=Data source
+DefaultValue=Default value
+RoleType=Role type
+RoleComposition=Role composition
+LastRejected=Last employee rejected?
+DocCheckedAndSentApproval=The document has been checked and sent for approval
+TimeConstraints=Time constraints
+UploadToServer=Upload to server
+SelectFiles=Select files
+UploadFilesCreateDocs=Upload files-create documets
+Loop=Loop
+AddLoopElement=Add 'Loop' element
