--- a/escom-bpm-resource/src/main/resources/locale/messages_en.properties
+++ b/escom-bpm-resource/src/main/resources/locale/messages_en.properties
@@ -203,7 +203,7 @@ DiagramNotHaveExit=The diagram does not specify a process exit!
 DiagramNotHaveStart=The scheme must be have the 'Start' or 'Enter' element. No entry point to the process is specified!
 DiagramNotHaveConnectors=Diagram not have a connectors!
 ConfirmInterruptionProcess=You interrupt the process that is currently running! Confirm your action!
-TasksNoHaveDeadline=The task [{0}] ''{1}'' don't have a deadline!
+TasksNoHaveDeadline=[{0}]. The task {1}: ''{2}'' ''{3}'' don't have a deadline!
 ProcessSuccessfullyLaunched=The process was successfully launched!
 ProcessExecutionInterrupted=The execution of the process interrupted!
 ErrorUnpackingProcessDiagram=Error unpacking process diagram!
@@ -321,3 +321,6 @@ UserUsedInFolders=User ''{0}'' used in 'Folders'!
 ReceivedSubscribDuplicateMsgChief=You received this message because you are subscribed to duplicate notifications about new tasks for Chief ''{0}''.
 ThisTaskOverdue=This task is overdue!
 DublicateMsg=You have duplicated message sent to ''{0}''.
+RightAddDocsInFolderNo=You do not have permission to add documents to the ''{0}'' folder
+FailedCreateDocFromFile=Failed to create document for file ''{0}''
+DocumentCreated=Document ''{0}''created.
