доработка монитора процессов

--- a/escom-bpm-resource/src/main/resources/locale/Bundle_en.properties
+++ b/escom-bpm-resource/src/main/resources/locale/Bundle_en.properties
@@ -1118,3 +1118,4 @@ SelectFiles=Select files
 UploadFilesCreateDocs=Upload files-create documets
 Loop=Loop
 AddLoopElement=Add 'Loop' element
+OpenProcessInProcessMonitor=To open the process in the "process Monitor"
