--- a/escom-bpm-resource/src/main/resources/locale/Bundle_en.properties
+++ b/escom-bpm-resource/src/main/resources/locale/Bundle_en.properties
@@ -627,7 +627,7 @@ DateSend=Date send
 DateRead=Data read
 MarkAsRead=Mark as read
 ShowOnlyUnReadMessage=Show only unread message
-GoToDocument=Go to document
+GoToDocument=Open document card
 System=System
 DuplicateMessagesEmail=Duplicate messages e-mail
 NoNewMessages=No new messages
@@ -842,7 +842,7 @@ Condition=Condition
 PlanEndDate=Planned execution date
 ServiceNotification=Service notification
 GoToTask=Go to task
-GoToProcess=Go to process
+GoToProcess=Open process card
 AddEnter=Add enter
 AddExit=Add exit
 ApprovalSheet=Approval sheet
