доработка карточки документа

--- a/escom-bpm-resource/src/main/resources/locale/Bundle_en.properties
+++ b/escom-bpm-resource/src/main/resources/locale/Bundle_en.properties
@@ -1119,3 +1119,4 @@ UploadFilesCreateDocs=Upload files-create documets
 Loop=Loop
 AddLoopElement=Add 'Loop' element
 OpenProcessInProcessMonitor=To open the process in the "process Monitor"
+Okato=Okato
