--- a/escom-bpm-resource/src/main/resources/locale/messages_en.properties
+++ b/escom-bpm-resource/src/main/resources/locale/messages_en.properties
@@ -319,8 +319,9 @@ InfoCleanUpFileStorage=Non-document-related files will be deleted from the file 
 CountFilesWereDeleted=Viewed ''{1}'' files. ''{0}'' was removed from them files
 UserUsedInFolders=User ''{0}'' used in 'Folders'!
 ReceivedSubscribDuplicateMsgChief=You received this message because you are subscribed to duplicate notifications about new tasks for Chief ''{0}''.
-ThisTaskOverdue=This task is overdue!
+ThisTaskOverdue=Task [{0}]is overdue!
 DublicateMsg=You have duplicated message sent to ''{0}''.
 RightAddDocsInFolderNo=You do not have permission to add documents to the ''{0}'' folder
 FailedCreateDocFromFile=Failed to create document for file ''{0}''
 DocumentCreated=Document ''{0}''created.
+ReminderTask=Task [{0} reminder. Prior to the execution left: {1}
