--- a/escom-bpm-resource/src/main/resources/locale/Bundle_en.properties
+++ b/escom-bpm-resource/src/main/resources/locale/Bundle_en.properties
@@ -1120,3 +1120,11 @@ Loop=Loop
 AddLoopElement=Add 'Loop' element
 OpenProcessInProcessMonitor=To open the process in the "process Monitor"
 Okato=Okato
+Events=Events
+EventFeed=Event feed
+PublishEventFeed=Publish to event feed
+MissionDay=Mission
+HospitalDay=Hospital
+PersonalCalendar=Personal calendar
+Widgets=Widgets
+DiskInfo=Disk info
