--- a/escom-bpm-resource/src/main/resources/locale/messages_en.properties
+++ b/escom-bpm-resource/src/main/resources/locale/messages_en.properties
@@ -325,3 +325,4 @@ RightAddDocsInFolderNo=You do not have permission to add documents to the ''{0}'
 FailedCreateDocFromFile=Failed to create document for file ''{0}''
 DocumentCreated=Document ''{0}''created.
 ReminderTask=Task [{0} reminder. Prior to the execution left: {1}
+CannotDelVersionBecauseConcorder=You cannot delete a version because it was part of the reconciliation
