доработка calck work time

--- a/escom-bpm-resource/src/main/resources/locale/Bundle_en.properties
+++ b/escom-bpm-resource/src/main/resources/locale/Bundle_en.properties
@@ -1128,3 +1128,6 @@ HospitalDay=Hospital
 PersonalCalendar=Personal calendar
 Widgets=Widgets
 DiskInfo=Disk info
+SelectOnlyTopLevelProcesses=Select only top-level processes
+AddEvent=Add event
+CheckAvailabilityEmployee=Check the availability employee
