--- a/escom-bpm-resource/src/main/resources/locale/messages_en.properties
+++ b/escom-bpm-resource/src/main/resources/locale/messages_en.properties
@@ -257,7 +257,7 @@ DepartamentSelected=Departament selected
 DateBeginNoSet=Begin date not set!
 ExecutorNotSet=Executor is not set!
 SelectedDateIsWeekend=The selected date is the weekend!
-DeadlineCalcWorkingCalendar=The deadline ''{0}'' is calculated taking into account the working calendar!
+DeadlineCalcWorkingCalendar=The deadline ''{0}'' is calculated taking into account the company working calendar!
 ForAddRemarkSaveProcess=For add remark save card of process!
 OpenFolderAndRemoveInherits=Open folder and remove option 'inherit right'!
 AllRecordsLoadedConfirm=All records from the database will be loaded! It may take a long time!
@@ -326,3 +326,7 @@ FailedCreateDocFromFile=Failed to create document for file ''{0}''
 DocumentCreated=Document ''{0}''created.
 ReminderTask=Task [{0} reminder. Prior to the execution left: {1}
 CannotDelVersionBecauseConcorder=You cannot delete a version because it was part of the reconciliation
+AddEventStaff=To add an event to the employee calendar
+SpecifiedPeriodIsNonWorking=The employee's calendar ''{0}'' in the period {1} - {2} has non-working days! The period of performance will be calculated for him according to his personal calendar!
+EmployeAvailableOnSpecifiedDates=A check was performed on the working time calendar. Employee ''{0}'' is available on the specified dates
+AvailabilyEmployeeWorkCalendarNotCheck=The availability of the employee by the working time calendar has not been checked!
