Диаграмма по задачам

--- a/escom-bpm-resource/src/main/resources/locale/Bundle_en.properties
+++ b/escom-bpm-resource/src/main/resources/locale/Bundle_en.properties
@@ -1131,3 +1131,17 @@ DiskInfo=Disk info
 SelectOnlyTopLevelProcesses=Select only top-level processes
 AddEvent=Add event
 CheckAvailabilityEmployee=Check the availability employee
+ExeInTime=Executed on time
+ExeOverdue=Executed with a delay
+FinishInTime=Completed on time
+FinishOverdue=Completed with delay
+ExecutionInfo=Execution info
+NoTasks=NoTasks
+ExePlanToday=The deadline is today
+ExeInTime=Executed on time
+ExeOverdue=Executed with a delay
+FinishInTime=Completed on time
+FinishOverdue=Completed with delay
+ExecutionInfo=Execution info
+NoTasks=NoTasks
+ExePlanToday=The deadline is today
