--- a/escom-bpm-resource/src/main/resources/locale/Bundle_en.properties
+++ b/escom-bpm-resource/src/main/resources/locale/Bundle_en.properties
@@ -903,8 +903,8 @@ ProcessExecutionControl=Process execution control
 Initiator=Initiator
 TermExecution=Term of execution
 ReportsExe=Execution reports
-TaskIsAssigned=The task is assigned
-TaskIsDone=The task is done
+TaskIsAssigned=The task ''{1}'' is assigned to executor ''{0}''.
+TaskIsDone=''{2}''. The executor ''{0}'' completed the task ''{1}''.
 Task\u0421anceled=Task canceled
 LoadFromTemlate=Load from temlate
 SaveAsTemlate=Save as temlate
