--- a/escom-bpm-resource/src/main/resources/locale/messages_en.properties
+++ b/escom-bpm-resource/src/main/resources/locale/messages_en.properties
@@ -199,9 +199,9 @@ StartStateNotPresentinListsStates=The starting state ''{0}'' is not in the list 
 WorkflowIncorrectData=Incorrect workflow route data! Process [{0}] ''{1}''.
 LinkProcessIncorrect=The link to the process is incorrect. It is possible that the process has been deleted.
 ProcessNotContainDoc=The process ''{0}'' does not contain a document!
-DiagramNotHaveExit=The diagram does not specify a process exit!
-DiagramNotHaveStart=The scheme must be have the 'Start' or 'Enter' element. No entry point to the process is specified!
-DiagramNotHaveConnectors=Diagram not have a connectors!
+DiagramNotHaveExit=Process [{0}] ''{1}''. The diagram does not specify a process exit!
+DiagramNotHaveStart=Process [{0}] ''{1}''. The scheme must be have the 'Start' or 'Enter' element. No entry point to the process is specified!
+DiagramNotHaveConnectors=Process [{0}] ''{1}''. Diagram not have a connectors!
 ConfirmInterruptionProcess=You interrupt the process that is currently running! Confirm your action!
 TasksNoHaveDeadline=[{0}]. The task {1}: ''{2}'' ''{3}'' don't have a deadline!
 ProcessSuccessfullyLaunched=The process was successfully launched!
@@ -224,8 +224,8 @@ ReminderTimeNotSet=Not set the reminder time!
 TaskCancelled=Task cancelled
 CopyingObjectsTypeNotProvided=Copying of objects of this type is not provided!
 ObjectWithIDNotFound=Object ''{0}'' with Id ''{1}'' not found! It is possible that it was removed from the database.
-TaskIsDone=The task is done
-TaskIsAssigned=The task is assigned
+TaskIsDone=''{2}''. The executor ''{0}'' completed the task ''{1}''.
+TaskIsAssigned=The task ''{1}'' is assigned to executor ''{0}''.
 Task\u0421anceled=Task canceled
 ReportIsNotFilled=The report is not filled!
 NoteRemoved=Note removed
@@ -263,7 +263,7 @@ OpenFolderAndRemoveInherits=Open folder and remove option 'inherit right'!
 AllRecordsLoadedConfirm=All records from the database will be loaded! It may take a long time!
 FolderCouldNotBeFound=The folder could not be found!
 OperationIsNotApplicable=This operation is not applicable!
-DiagramNotHaveTasks=In the diagram there are no tasks and no subprocesses!
+DiagramNotHaveTasks=Process [{0}] ''{1}''. In the diagram there are no tasks and no subprocesses!
 NoEmailSpecified=No e-mail specified!
 TaskIsFinishedBecauseProcessComplete=Task is finished, because the process is complete.
 NoYourRemarksActionRequiresRemarks=No Your remarks! This action requires actual remarks!
@@ -314,7 +314,7 @@ DocumentWillBeSavedContinue=The document will be saved! Continue?
 NotifyFromDoc=Notify from document
 PatternInfo=You can use: N-sequence number, YY-year four digits, y-year one digit, T-document type code, O-company code
 InfoChangeRight=When you are finished editing permissions, click Save"
-CuratorNotSet=The role of the process Curator is not correct!
+CuratorNotSet=Process [{0}] ''{1}''. The role of the process Curator is not correct!
 InfoCleanUpFileStorage=Non-document-related files will be deleted from the file storage
 CountFilesWereDeleted=Viewed ''{1}'' files. ''{0}'' was removed from them files
 UserUsedInFolders=User ''{0}'' used in 'Folders'!
