пара ошибок устранена

--- a/escom-bpm-resource/src/main/resources/locale/messages_en.properties
+++ b/escom-bpm-resource/src/main/resources/locale/messages_en.properties
@@ -126,7 +126,7 @@ CompanyUsedInDepartaments=Company ''{0}'' used in departaments!
 AccessDeniedEdit=Access denied edit object ''{0}''
 AddObjectToGroupComplete=Object ''{0}'' add to group ''{1}'' completed!
 NoCheckedItems=No checked items!
-UserGroupsUsedInRights=Group ''{0}'' used in rights!
+UserGroupsUsedInRights=User group ''{0}'' used in rights!
 ObjectDontHaveRightEdit=Object dont have right edit!
 RightsSettingCorrect=Setting rights is correct
 CheckRights=Check the setting of access rights!
@@ -330,3 +330,4 @@ AddEventStaff=To add an event to the employee calendar
 SpecifiedPeriodIsNonWorking=The employee's calendar ''{0}'' in the period {1} - {2} has non-working days! The period of performance will be calculated for him according to his personal calendar!
 EmployeAvailableOnSpecifiedDates=A check was performed on the working time calendar. Employee ''{0}'' is available on the specified dates
 AvailabilyEmployeeWorkCalendarNotCheck=The availability of the employee by the working time calendar has not been checked!
+UserGroupsUsedInProcessRoles=User group ''{0}'' used in process settings
