некоторые доработки по созданию документов

--- a/escom-bpm-resource/src/main/resources/locale/messages_en.properties
+++ b/escom-bpm-resource/src/main/resources/locale/messages_en.properties
@@ -331,3 +331,4 @@ SpecifiedPeriodIsNonWorking=The employee's calendar ''{0}'' in the period {1} - 
 EmployeAvailableOnSpecifiedDates=A check was performed on the working time calendar. Employee ''{0}'' is available on the specified dates
 AvailabilyEmployeeWorkCalendarNotCheck=The availability of the employee by the working time calendar has not been checked!
 UserGroupsUsedInProcessRoles=User group ''{0}'' used in process settings
+FolderIsNotSelected=
