доработка удаления папки, доработка формирования и вывод штрих-кода

--- a/escom-bpm-resource/src/main/resources/locale/Bundle_en.properties
+++ b/escom-bpm-resource/src/main/resources/locale/Bundle_en.properties
@@ -1145,3 +1145,4 @@ FinishOverdue=Completed with delay
 ExecutionInfo=Execution info
 NoTasks=NoTasks
 ExePlanToday=The deadline is today
+BarCode=Bar code
