--- a/escom-bpm-resource/src/main/resources/locale/Bundle_en.properties
+++ b/escom-bpm-resource/src/main/resources/locale/Bundle_en.properties
@@ -255,7 +255,7 @@ GroupSelector=Groups selector
 MakeMain=Make main
 SearcheInCurrentGroup=to search in the current group
 SearcheWitchOutGroup=to search without considering group
-SearcheOnlyActualItems=search only for relevant objects
+SearcheOnlyActualItems=Search only for actual objects
 SearcheOnlyActualItemsComments=Will find records with tag "Actual"
 NO_SEARCHE_GROUPS=Not specified search group!
 Journal=Journal
