--- a/escom-bpm-resource/src/main/resources/locale/Bundle_en.properties
+++ b/escom-bpm-resource/src/main/resources/locale/Bundle_en.properties
@@ -253,7 +253,7 @@ GroupsCurrent=Current group
 PartnerGroups=Groups partner
 GroupSelector=Groups selector
 MakeMain=Make main
-SearcheInCurrentGroup=to search in the current group
+SearcheInCurrentGroup=Search only in the current folder/group
 SearcheWitchOutGroup=to search without considering group
 SearcheOnlyActualItems=Search only for actual objects
 SearcheOnlyActualItemsComments=Will find records with tag "Actual"
@@ -1146,3 +1146,5 @@ ExecutionInfo=Execution info
 NoTasks=NoTasks
 ExePlanToday=The deadline is today
 BarCode=Bar code
+SearchInCurrentFolderAndSubfolders=Search the current folder and subfolders/groups
+SearcheMode=Searche mode
