--- a/escom-bpm-resource/src/main/resources/locale/messages_en.properties
+++ b/escom-bpm-resource/src/main/resources/locale/messages_en.properties
@@ -49,7 +49,7 @@ AccessDeniedDragDoc=You can not move this object!
 Info=Info
 NO_SEARCHE_PARAMS=Not specified search parameters
 NO_SEARCHE_FIND=According to the specified search criteria is found nothing
-NO_SEARCHE_GROUPS=Not specified search group!
+NO_SEARCHE_GROUPS=Not specified search folder/group! The search is based on the current folder(group). Select a folder(group)!
 DocIsRegistred=Document is registred!
 DocIsRegAndLock=If you want to change locked fields of the document, then click unregister
 DocRegCanceled=Document registration canceled
