доработка редактора оргструктуры

--- a/escom-bpm-resource/src/main/resources/locale/Bundle_en.properties
+++ b/escom-bpm-resource/src/main/resources/locale/Bundle_en.properties
@@ -1148,3 +1148,5 @@ ExePlanToday=The deadline is today
 BarCode=Bar code
 SearchInCurrentFolderAndSubfolders=Search the current folder and subfolders/groups
 SearcheMode=Searche mode
+CollapseAll=Collapse all
+ExpandAll=Expand all
