разработка обозревателя задач

--- a/escom-bpm-resource/src/main/resources/locale/Bundle_en.properties
+++ b/escom-bpm-resource/src/main/resources/locale/Bundle_en.properties
@@ -1150,3 +1150,4 @@ SearchInCurrentFolderAndSubfolders=Search the current folder and subfolders/grou
 SearcheMode=Searche mode
 CollapseAll=Collapse all
 ExpandAll=Expand all
+TaskExplorer=Task explorer
