исправлена ошибка при освобождении лицензий исправлена ошибка при проверке токена исправлена ошибка вывода сообщения об отсутствии свободных лицензий

--- a/escom-bpm-resource/src/main/resources/locale/messages_en.properties
+++ b/escom-bpm-resource/src/main/resources/locale/messages_en.properties
@@ -333,3 +333,4 @@ AvailabilyEmployeeWorkCalendarNotCheck=The availability of the employee by the w
 UserGroupsUsedInProcessRoles=User group ''{0}'' used in process settings
 FolderIsNotSelected=Folder is not selected!
 SaveDocForCreateBarCode=Save this document for create BarCode
+NoFreeLicenses=No free licenses!
